fixed few things: boundary, sheath, main, ...

--- a/tests/cpc_example/input/gitrInput.cfg
+++ b/tests/cpc_example/input/gitrInput.cfg
@@ -1,34 +1,35 @@
 
 domain = { 
-        xmin = -10.149994; 
-        xmax = 10.149994; 
-        ymin = -10.149994;
-        ymax = 10.149994;
-        zmin = -10.2
-        zmax = 10.299997; 
+        xmin = -0.0149994;
+        xmax = 0.0149994;
+        ymin = -0.0149994;
+        ymax = 0.0149994;
+        zmin = -0.00865992
+        zmax = 0.0299997;
   }
 
-geometry = { fileString = "gitrGeometryPointPlane3d.cfg"; }
+geometry = { 
+    fileString = "gitrGeometryPointPlane3d.cfg";
+     }
 
-
-particleSource = { ncFileString = "O.nc"; }
+particleSource = { ncFileString = "particleSource.nc"; }
 
 backgroundPlasmaProfiles =  { 
         Z = 1.0; 
-        amu = 2.0; 
+        amu = 2.0;
         Bfield = 
-    { 
-        r = 1; 
-        z = 0.0;  
-        y = 0.0; 
+    {
+        r =  1.0;
+        z =  0.0;
+        y =  0.0;
         fileString = "ar2Input.nc"; 
     } 
     }
 
 
 timeStep = { 
-        dt = 5e-4;
-        nT = 2000;
+        dt = 5e-9;
+        nT = 500000;
      }
 
 surfaces = { useMaterialSurfaces = 1; 
@@ -47,16 +48,58 @@ diagnostics = {
         dumpTrajectories = "dump."; 
  }
 
-flags = 
+flags =
 {
-    USE_CUDA = 0;
-    USE_RECOMBINATION = 0;
-    USE_BACKGROUNDCOLLISIONS = 0;
-    USE_SURFACEMODEL = 0;
-    USE_SHEATHEFIELD = 0;
-    BFIELD_INTERP = 0;
-    PRESHEATH_INTERP = 0;
-    USE3DTETGEOM = 1;
-    USE_SURFACE_POTENTIAL = 0;
-        USE_IONIZATION = 0;
+    USE_CUDA=0;
+    USE_MPI=0;
+    USE_OPENMP=0;
+    USE_BOOST=1;
+    USE_IONIZATION=1;
+    USE_RECOMBINATION=1;
+    USE_PERP_DIFFUSION=0;
+    USE_COULOMB_COLLISIONS=1;
+    USE_FRICTION=1;
+    USE_ANGLE_SCATTERING=1;
+    USE_HEATING=1;
+    USE_THERMAL_FORCE=0;
+    USE_SURFACE_MODEL=1;
+    USE_SHEATHEFIELD=1;
+    BIASED_SURFACE=0;
+    USE_PRESHEATH_EFIELD=0;
+    BFIELD_INTERP=0;
+    LC_INTERP=0;
+    GENERATE_LC=0;
+    EFIELD_INTERP=0;
+    PRESHEATH_INTERP=0;
+    DENSITY_INTERP=0;
+    TEMP_INTERP=0;
+    FLOWV_INTERP=0;
+    GRADT_INTERP=0;
+    ODE_INT=0;
+    FIXED_SEEDS=1;
+    PARTICLE_SEEDS=1;
+    GEOM_TRACE=0;
+    GEOM_HASH=1;
+    GEOM_HASH_SHEATH=1;
+    PARTICLE_TRACKS=1;
+    PARTICLE_SOURCE_SPACE=0;
+    PARTICLE_SOURCE_ENERGY=0;
+    PARTICLE_SOURCE_ANGLE=0;
+    PARTICLE_SOURCE_FILE=0;
+    SPECTROSCOPY=3;
+    USE_3DTET_GEOM=1;
+    USE_CYL_SYMM=0;
+    USE_FIELD_ALIGNED_VALUES=0;
+    FLUX_EA=1;
+    FORCE_EVAL=0;
+    USE_SORT=0;
+    CHECK_COMPATIBILITY=1;
+    USE_ADAPTIVE_DT=0;
+
+    IONIZATION=0;
+    USE_SURFACE_POTENTIAL=0;
+    USE_BACKGROUND_COLLISIONS=0;
+    USE3DTETGEOM=1;
+    USE_BACKGROUNDCOLLISIONS=1;
+    USE_SURFACEMODEL=0;
 }
