--- a/tests/cpc_example/input/gitrInput.cfg
+++ b/tests/cpc_example/input/gitrInput.cfg
@@ -1,51 +1,51 @@
 
-domain = { 
-        xmin = -0.0149994;
-        xmax = 0.0149994;
-        ymin = -0.0149994;
-        ymax = 0.0149994;
-        zmin = -0.00865992
-        zmax = 0.0299997;
+domain = {
+        xmin = 0.0;
+        xmax = 0.0919991;
+        ymin = 0.0;
+        ymax = 0.0919991;
+        zmin = 0.0;
+        zmax = 0.0919991;
   }
 
-geometry = { 
-    fileString = "gitrGeometryPointPlane3d.cfg";
+geometry = {
+    fileString = "gitrGeometry.cfg";
      }
 
 particleSource = { ncFileString = "particleSource.nc"; }
 
-backgroundPlasmaProfiles =  { 
-        Z = 1.0; 
+backgroundPlasmaProfiles =  {
+        Z = 1.0;
         amu = 2.0;
-        Bfield = 
+        Bfield =
     {
         r =  1.0;
         z =  0.0;
         y =  0.0;
-        fileString = "ar2Input.nc"; 
-    } 
+        fileString = "ar2Input.nc";
+    }
     }
 
 
-timeStep = { 
-        dt = 5e-9;
-        nT = 500000;
+timeStep = {
+        dt = 1e-07;
+        nT = 1000;
      }
 
-surfaces = { useMaterialSurfaces = 1; 
-flux = { 
+surfaces = { useMaterialSurfaces = 1;
+flux = {
             nE = 200;
             E0 = 0.0;
             E = 1000.0;
-            nA = 90; 
-            A0 = 0.0; 
-            A = 90.0; 
+            nA = 90;
+            A0 = 0.0;
+            A = 90.0;
        }
         }
 
-diagnostics = { 
-        trackSubSampleFactor = 100;
-        dumpTrajectories = "dump."; 
+diagnostics = {
+        trackSubSampleFactor = 10;
+        dumpTrajectories = "dump.";
  }
 
 flags =
@@ -96,7 +96,8 @@ flags =
     CHECK_COMPATIBILITY=1;
     USE_ADAPTIVE_DT=0;
 
-    IONIZATION=0;
+    IONIZATION=1;
+    RECOMBINATION=1;
     USE_SURFACE_POTENTIAL=0;
     USE_BACKGROUND_COLLISIONS=0;
     USE3DTETGEOM=1;
