--- a/tests/cpc_example/input/gitrInput.cfg
+++ b/tests/cpc_example/input/gitrInput.cfg
@@ -12,66 +12,59 @@ geometry = {
     fileString = "gitrGeometry.cfg";
      }
 
-particleSource = { ncFileString = "particleSource.nc"; }
+particleSource = { 
+    ncFileString = "particleSource.nc";
+     }
 
 backgroundPlasmaProfiles =  {
         Z = 1.0;
         amu = 2.0;
         Bfield =
     {
-        r =  2.0;
+        r =  0.0;
         z =  0.0;
         y =  0.0;
     }
     }
 
-
 timeStep = {
-        dt = 5e-09;
-        nT = 10000;
+        dt = 1e-09;
+        nT = 100000;
      }
 
 surfaces = { useMaterialSurfaces = 1;
-flux = {
-            nE = 200;
-            E0 = 0.0;
-            E = 1000.0;
-            nA = 90;
-            A0 = 0.0;
-            A = 90.0;
-       }
+    flux = {
+                nE = 200;
+                E0 = 0.0;
+                E = 1000.0;
+                nA = 90;
+                A0 = 0.0;
+                A = 90.0;
         }
+    }
 
 diagnostics = {
-        trackSubSampleFactor = 1000;
+        trackSubSampleFactor = 100;
         dumpTrajectories = "dump.";
- }
+   }
 
 flags =
-{
+    {
     USE_CUDA=0;
-    USE_MPI=0;
-    USE_OPENMP=0;
-    USE_BOOST=1;
+
+    USE3DTETGEOM=1;
 
     BFIELD_INTERP=0;
-    USE_SHEATHEFIELD=1;
+    USE_SHEATHEFIELD=0;
     PRESHEATH_INTERP=0;
     DENSITY_INTERP=0;
     FIXED_SEEDS=1;
-    USE_FIELD_ALIGNED_VALUES=0;
-    FLUX_EA=1;
-    FORCE_EVAL=0;
-    USE_SORT=0;
-    CHECK_COMPATIBILITY=1;
-    USE_ADAPTIVE_DT=0;
+
     USE_SURFACE_POTENTIAL=0;
+
+    USE_IONIZATION=1;
+    USE_RECOMBINATION=1;
     
-    USE_IONIZATION=0;
-    USE_RECOMBINATION=0;
-    
-    USE_BACKGROUND_COLLISIONS=1;
-    USE3DTETGEOM=1;
-    USE_BACKGROUNDCOLLISIONS=1;
-    USE_SURFACEMODEL=1;
+    USE_BACKGROUNDCOLLISIONS=0;
+    USE_SURFACEMODEL=0;
 }
